:feat add rota tasks by user by status
